examples/errors/redefinition/E0301_redefined_function.hd
fn foo(): void {
    return;
}

fn foo(): int {
    return 42;
}

fn main(): void {
    return;
}
